# rust-primitive_enum

./: Cargo.toml  README.md
src/: lib.rs
tests/: sample.rs
