[package]
name = "primitive_enum"
version = "1.0.2"
authors = ["math4tots <math4tots@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/math4tots/rust-primitive_enum/"
repository = "https://github.com/math4tots/rust-primitive_enum/"
documentation = "https://github.com/math4tots/rust-primitive_enum/"
readme = "README.md"
description = """
Little utility for dealing with enums no extra data in variants
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
